--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "airtable": "^0.8.1",
     "algoliasearch": "^4.3.0",
     "babel-plugin-styled-components": "^1.10.7",
+    "bootstrap": "^4.6.0",
     "gatsby": "^2.23.12",
     "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.4.9",
@@ -25,6 +26,7 @@
     "gatsby-transformer-sharp": "^2.5.7",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^3.10.0",
