--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.4.9",
     "gatsby-plugin-algolia": "^0.0.4",
+    "gatsby-plugin-image": "^1.3.1",
     "gatsby-plugin-manifest": "^2.4.14",
     "gatsby-plugin-offline": "^3.2.13",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
