--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@styled-icons/fa-solid": "^10.10.0",
-    "airtable": "^0.8.1",
+    "airtable": "^0.11.0",
     "algoliasearch": "^4.3.0",
     "babel-plugin-styled-components": "^1.10.7",
     "bootstrap": "^4.6.0",
